aggiunta cache per tokenizer

--- a/parameters.ini
+++ b/parameters.ini
@@ -10,6 +10,8 @@ PathInputDev = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_or
 
 PathOutput = output/
 PathModel = weights/
+DatasetName = DataSet
+DatasetTokenizedDir = datasets_tokenized
 AdapterConfig = Pfeiffer
 ReductionFactor = 0
 ClassificatorLayers = 2
@@ -29,6 +31,13 @@ ReductionFactor = 0
 
 [Experiment_1]
 ReductionFactor = 2
+
+[toy]
+ExperimentName = toy
+DatasetName = toy_dataset
+PathInputTrain = /home/fmoiraghi/HDD/adapter_on_entity_typing/toy_dataset.json
+PathInputDev   = /home/fmoiraghi/HDD/adapter_on_entity_typing/toy_dataset.json
+DatasetTokenizedDir = datasets_tokenized
 
 [experiment_0]
 MaxContextSideSize = 0
@@ -121,48 +130,56 @@ ExperimentName = lastLayerContextSizeFIGER15
 ExperimentName = bertFeatureExtraction_FIGER
 PathInputTrain = /datahdd/vmanuel/entity_typing_all_datasets/data/FIGER/train_partitioned.json
 PathInputDev = /datahdd/vmanuel/entity_typing_all_datasets/data/FIGER/dev_partitioned.json
+DatasetName = FIGER
 BertFineTuning = 0
 
 [bert_ft_1_figer]
 ExperimentName = bertFT1_FIGER
 PathInputTrain = /datahdd/vmanuel/entity_typing_all_datasets/data/FIGER/train_partitioned.json
 PathInputDev = /datahdd/vmanuel/entity_typing_all_datasets/data/FIGER/dev_partitioned.json
+DatasetName = FIGER
 BertFineTuning = 1
 
 [bert_ft_2_figer]
 ExperimentName = bertFT2_FIGER
 PathInputTrain = /datahdd/vmanuel/entity_typing_all_datasets/data/FIGER/train_partitioned.json
 PathInputDev = /datahdd/vmanuel/entity_typing_all_datasets/data/FIGER/dev_partitioned.json
+DatasetName = FIGER
 BertFineTuning = 2
 
 [adapter_1_figer]
 ExperimentName = adapters1_FIGER
 PathInputTrain = /datahdd/vmanuel/entity_typing_all_datasets/data/FIGER/train_partitioned.json
 PathInputDev = /datahdd/vmanuel/entity_typing_all_datasets/data/FIGER/dev_partitioned.json
+DatasetName = FIGER
 ReductionFactor = 1
 
 [adapter_2_figer]
 ExperimentName = adapters2_FIGER
 PathInputTrain = /datahdd/vmanuel/entity_typing_all_datasets/data/FIGER/train_partitioned.json
 PathInputDev = /datahdd/vmanuel/entity_typing_all_datasets/data/FIGER/dev_partitioned.json
+DatasetName = FIGER
 ReductionFactor = 2
 
 [adapter_4_figer]
 ExperimentName = adapters4_FIGER
 PathInputTrain = /datahdd/vmanuel/entity_typing_all_datasets/data/FIGER/train_partitioned.json
 PathInputDev = /datahdd/vmanuel/entity_typing_all_datasets/data/FIGER/dev_partitioned.json
+DatasetName = FIGER
 ReductionFactor = 4
 
 [adapter_8_figer]
 ExperimentName = adapters8_FIGER
 PathInputTrain = /datahdd/vmanuel/entity_typing_all_datasets/data/FIGER/train_partitioned.json
 PathInputDev = /datahdd/vmanuel/entity_typing_all_datasets/data/FIGER/dev_partitioned.json
+DatasetName = FIGER
 ReductionFactor = 8
 
 [adapter_16_figer]
 ExperimentName = adapters16_FIGER
 PathInputTrain = /datahdd/vmanuel/entity_typing_all_datasets/data/FIGER/train_partitioned.json
 PathInputDev = /datahdd/vmanuel/entity_typing_all_datasets/data/FIGER/dev_partitioned.json
+DatasetName = FIGER
 ReductionFactor = 16
 
 
@@ -171,48 +188,56 @@ ReductionFactor = 16
 ExperimentName = bertFeatureExtraction_BBN
 PathInputTrain = /datahdd/vmanuel/entity_typing_all_datasets/data/BBN/BBN/train_partitioned.json
 PathInputDev =   /datahdd/vmanuel/entity_typing_all_datasets/data/BBN/BBN/dev_partitioned.json
+DatasetName = BBN
 BertFineTuning = 0
 
 [bert_ft_1_bbn]
 ExperimentName = bertFT1_BBN
 PathInputTrain = /datahdd/vmanuel/entity_typing_all_datasets/data/BBN/BBN/train_partitioned.json
 PathInputDev =   /datahdd/vmanuel/entity_typing_all_datasets/data/BBN/BBN/dev_partitioned.json
+DatasetName = BBN
 BertFineTuning = 1
 
 [bert_ft_2_bbn]
 ExperimentName = bertFT2_BBN
 PathInputTrain = /datahdd/vmanuel/entity_typing_all_datasets/data/BBN/BBN/train_partitioned.json
 PathInputDev =   /datahdd/vmanuel/entity_typing_all_datasets/data/BBN/BBN/dev_partitioned.json
+DatasetName = BBN
 BertFineTuning = 2
 
 [adapter_1_bbn]
 ExperimentName = adapters1_BBN
 PathInputTrain = /datahdd/vmanuel/entity_typing_all_datasets/data/BBN/BBN/train_partitioned.json
 PathInputDev =   /datahdd/vmanuel/entity_typing_all_datasets/data/BBN/BBN/dev_partitioned.json
+DatasetName = BBN
 ReductionFactor = 1
 
 [adapter_2_bbn]
 ExperimentName = adapters2_BBN
 PathInputTrain = /datahdd/vmanuel/entity_typing_all_datasets/data/BBN/BBN/train_partitioned.json
 PathInputDev =   /datahdd/vmanuel/entity_typing_all_datasets/data/BBN/BBN/dev_partitioned.json
+DatasetName = BBN
 ReductionFactor = 2
 
 [adapter_4_bbn]
 ExperimentName = adapters4_BBN
 PathInputTrain = /datahdd/vmanuel/entity_typing_all_datasets/data/BBN/BBN/train_partitioned.json
 PathInputDev =   /datahdd/vmanuel/entity_typing_all_datasets/data/BBN/BBN/dev_partitioned.json
+DatasetName = BBN
 ReductionFactor = 4
 
 [adapter_8_bbn]
 ExperimentName = adapters8_BBN
 PathInputTrain = /datahdd/vmanuel/entity_typing_all_datasets/data/BBN/BBN/train_partitioned.json
 PathInputDev =   /datahdd/vmanuel/entity_typing_all_datasets/data/BBN/BBN/dev_partitioned.json
+DatasetName = BBN
 ReductionFactor = 8
 
 [adapter_16_bbn]
 ExperimentName = adapters16_BBN
 PathInputTrain = /datahdd/vmanuel/entity_typing_all_datasets/data/BBN/BBN/train_partitioned.json
 PathInputDev =   /datahdd/vmanuel/entity_typing_all_datasets/data/BBN/BBN/dev_partitioned.json
+DatasetName = BBN
 ReductionFactor = 16
 
 
@@ -221,48 +246,56 @@ ReductionFactor = 16
 ExperimentName = bertFeatureExtraction_OntoNotes
 PathInputTrain = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/ontonotes/g_train_tree.json
 PathInputDev = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/ontonotes/g_dev_tree.json
+DatasetName = OntoNotes
 BertFineTuning = 0
 
 [bert_ft_1_onto]
 ExperimentName = bertFT1_OntoNotes
 PathInputTrain = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/ontonotestg_rain_tree.json
 PathInputDev = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/ontonotes/g_dev_tree.json
+DatasetName = OntoNotes
 BertFineTuning = 1
 
 [bert_ft_2_onto]
 ExperimentName = bertFT2_OntoNotes
 PathInputTrain = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/ontonotes/g_train_tree.json
 PathInputDev = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/ontonotes/g_dev_tree.json
+DatasetName = OntoNotes
 BertFineTuning = 2
 
 [adapter_1_onto]
 ExperimentName = adapters1_OntoNotes
 PathInputTrain = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/ontonotes/g_train_tree.json
 PathInputDev = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/ontonotes/g_dev_tree.json
+DatasetName = OntoNotes
 ReductionFactor = 1
 
 [adapter_2_onto]
 ExperimentName = adapters2_OntoNotes
 PathInputTrain = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/ontonotes/g_train_tree.json
 PathInputDev = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/ontonotes/g_dev_tree.json
+DatasetName = OntoNotes
 ReductionFactor = 2
 
 [adapter_4_onto]
 ExperimentName = adapters4_OntoNotes
 PathInputTrain = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/ontonotes/g_train_tree.json
 PathInputDev = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/ontonotes/g_dev_tree.json
+DatasetName = OntoNotes
 ReductionFactor = 4
 
 [adapter_8_onto]
 ExperimentName = adapters8_OntoNotes
 PathInputTrain = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/ontonotes/g_train_tree.json
 PathInputDev = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/ontonotes/g_dev_tree.json
+DatasetName = OntoNotes
 ReductionFactor = 8
 
 [adapter_16_onto]
 ExperimentName = adapters16_OntoNotes
 PathInputTrain = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/ontonotes/g_train_tree.json
 PathInputDev = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/ontonotes/g_dev_tree.json
+DatasetName = OntoNotes
 ReductionFactor = 16
 
 
@@ -271,46 +304,54 @@ ReductionFactor = 16
 ExperimentName = bertFeatureExtraction_choi
 PathInputTrain = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/choi/train.json
 PathInputDev = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/choi/dev.json
+DatasetName = Choi
 BertFineTuning = 0
 
 [bert_ft_1_choi]
 ExperimentName = bertFT1_choi
 PathInputTrain = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/choi/train.json
 PathInputDev = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/choi/dev.json
+DatasetName = Choi
 BertFineTuning = 1
 
 [bert_ft_2_choi]
 ExperimentName = bertFT2_choi
 PathInputTrain = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/choi/train.json
 PathInputDev = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/choi/dev.json
+DatasetName = Choi
 BertFineTuning = 2
 
 [adapter_1_choi]
 ExperimentName = adapters1_choi
 PathInputTrain = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/choi/train.json
 PathInputDev = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/choi/dev.json
+DatasetName = Choi
 ReductionFactor = 1
 
 [adapter_2_choi]
 ExperimentName = adapters2_choi
 PathInputTrain = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/choi/train.json
 PathInputDev = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/choi/dev.json
+DatasetName = Choi
 ReductionFactor = 2
 
 [adapter_4_choi]
 ExperimentName = adapters4_choi
 PathInputTrain = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/choi/train.json
 PathInputDev = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/choi/dev.json
+DatasetName = Choi
 ReductionFactor = 4
 
 [adapter_8_choi]
 ExperimentName = adapters8_choi
 PathInputTrain = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/choi/train.json
 PathInputDev = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/choi/dev.json
+DatasetName = Choi
 ReductionFactor = 8
 
 [adapter_16_choi]
 ExperimentName = adapters16_choi
 PathInputTrain = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/choi/train.json
 PathInputDev = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/choi/dev.json
+DatasetName = Choi
 ReductionFactor = 16
