added cold start

--- a/parameters.ini
+++ b/parameters.ini
@@ -11,14 +11,15 @@ PathInputDev = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_or
 PathOutput = output/
 PathModel = weights/
 DatasetName = DataSet
+; DatasetTokenizedDir = /home/fmoiraghi/HDD/adapter_on_entity_typing/datasets_tokenized
 DatasetTokenizedDir = datasets_tokenized
 AdapterConfig = Pfeiffer
 ReductionFactor = 0
 ClassificatorLayers = 2
 NumLabels = 47
 Patience = 5
-MaxEpoch = 100
-BatchSize = 512
+MaxEpoch = 1000
+BatchSize = 256
 LearningRate = 1e-4
 MaxContextSideSize = 15
 MaxEntitySize = 11
@@ -300,58 +301,65 @@ ReductionFactor = 16
 
 
 ;; choi
+[choi_toy]
+ExperimentName = choitoy
+PathInputTrain = /home/fmoiraghi/HDD/adapter_on_entity_typing/toy_dataset.json
+PathInputDev   = /home/fmoiraghi/HDD/adapter_on_entity_typing/toy_dataset.json
+DatasetName = ChoiToy
+BertFineTuning = 0
+
 [bert_ft_0_choi]
 ExperimentName = bertFeatureExtraction_choi
 PathInputTrain = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/choi/train.json
 PathInputDev = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/choi/dev.json
-DatasetName = Choi
+DatasetName = ChoiNew
 BertFineTuning = 0
 
 [bert_ft_1_choi]
 ExperimentName = bertFT1_choi
 PathInputTrain = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/choi/train.json
 PathInputDev = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/choi/dev.json
-DatasetName = Choi
+DatasetName = ChoiNew
 BertFineTuning = 1
 
 [bert_ft_2_choi]
 ExperimentName = bertFT2_choi
 PathInputTrain = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/choi/train.json
 PathInputDev = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/choi/dev.json
-DatasetName = Choi
+DatasetName = ChoiNew
 BertFineTuning = 2
 
 [adapter_1_choi]
 ExperimentName = adapters1_choi
 PathInputTrain = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/choi/train.json
 PathInputDev = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/choi/dev.json
-DatasetName = Choi
+DatasetName = ChoiNew
 ReductionFactor = 1
 
 [adapter_2_choi]
 ExperimentName = adapters2_choi
 PathInputTrain = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/choi/train.json
 PathInputDev = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/choi/dev.json
-DatasetName = Choi
+DatasetName = ChoiNew
 ReductionFactor = 2
 
 [adapter_4_choi]
 ExperimentName = adapters4_choi
 PathInputTrain = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/choi/train.json
 PathInputDev = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/choi/dev.json
-DatasetName = Choi
+DatasetName = ChoiNew
 ReductionFactor = 4
 
 [adapter_8_choi]
 ExperimentName = adapters8_choi
 PathInputTrain = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/choi/train.json
 PathInputDev = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/choi/dev.json
-DatasetName = Choi
+DatasetName = ChoiNew
 ReductionFactor = 8
 
 [adapter_16_choi]
 ExperimentName = adapters16_choi
 PathInputTrain = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/choi/train.json
 PathInputDev = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/choi/dev.json
-DatasetName = Choi
+DatasetName = ChoiNew
 ReductionFactor = 16
