--- a/parameters.ini
+++ b/parameters.ini
@@ -2,14 +2,12 @@
 ; PathInputTrain = /datahdd/vmanuel/entity_typing_all_datasets/data/FIGER/train_partitioned.json
 ; PathInputDev = /datahdd/vmanuel/entity_typing_all_datasets/data/FIGER/dev_partitioned.json
 
-PathInputTrain = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/choi/train_m_tree.json
-PathInputDev = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/choi/dev_tree.json
-
-; PathInputTrain = /datahdd/vmanuel/entity_typing_all_datasets/data/BBN/BBN/train_partitioned.json
-; PathInputDev =   /datahdd/vmanuel/entity_typing_all_datasets/data/BBN/BBN/dev_partitioned.json
+PathInputTrain = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/choi/train.json
+PathInputDev   = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/choi/dev.json
+PathInputTest  = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/choi/test_tree.json
 
 PathOutput = output/
-PathModel = weights/
+PathModel = trained_models
 DatasetName = DataSet
 ; DatasetTokenizedDir = /home/fmoiraghi/HDD/adapter_on_entity_typing/datasets_tokenized
 DatasetTokenizedDir = datasets_tokenized
