setup di load_model per pretrained diverso

--- a/parameters.ini
+++ b/parameters.ini
@@ -8,13 +8,13 @@ PathInputTest  = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_
 
 PathOutput = output/
 PathModel = trained_models
+PretrainedModel = same
 DatasetName = DataSet
 ; DatasetTokenizedDir = /home/fmoiraghi/HDD/adapter_on_entity_typing/datasets_tokenized
 DatasetTokenizedDir = datasets_tokenized
 AdapterConfig = Pfeiffer
 ReductionFactor = 0
 ClassificatorLayers = 2
-NumLabels = 47
 Patience = 5
 MaxEpoch = 1000
 BatchSize = 256
