added the code to generate predictions, save them and compute metrics

--- a/parameters.ini
+++ b/parameters.ini
@@ -129,6 +129,7 @@ ExperimentName = lastLayerContextSizeFIGER15
 ExperimentName = bertFeatureExtraction_FIGER
 PathInputTrain = /datahdd/vmanuel/entity_typing_all_datasets/data/FIGER/train_partitioned.json
 PathInputDev = /datahdd/vmanuel/entity_typing_all_datasets/data/FIGER/dev_partitioned.json
+PathInputTest = /datahdd/vmanuel/entity_typing_all_datasets/data/FIGER/test_lines.json
 DatasetName = FIGER
 BertFineTuning = 0
 
@@ -136,6 +137,7 @@ BertFineTuning = 0
 ExperimentName = bertFT1_FIGER
 PathInputTrain = /datahdd/vmanuel/entity_typing_all_datasets/data/FIGER/train_partitioned.json
 PathInputDev = /datahdd/vmanuel/entity_typing_all_datasets/data/FIGER/dev_partitioned.json
+PathInputTest = /datahdd/vmanuel/entity_typing_all_datasets/data/FIGER/test_lines.json
 DatasetName = FIGER
 BertFineTuning = 1
 
@@ -143,6 +145,7 @@ BertFineTuning = 1
 ExperimentName = bertFT2_FIGER
 PathInputTrain = /datahdd/vmanuel/entity_typing_all_datasets/data/FIGER/train_partitioned.json
 PathInputDev = /datahdd/vmanuel/entity_typing_all_datasets/data/FIGER/dev_partitioned.json
+PathInputTest = /datahdd/vmanuel/entity_typing_all_datasets/data/FIGER/test_lines.json
 DatasetName = FIGER
 BertFineTuning = 2
 
@@ -150,6 +153,7 @@ BertFineTuning = 2
 ExperimentName = adapters1_FIGER
 PathInputTrain = /datahdd/vmanuel/entity_typing_all_datasets/data/FIGER/train_partitioned.json
 PathInputDev = /datahdd/vmanuel/entity_typing_all_datasets/data/FIGER/dev_partitioned.json
+PathInputTest = /datahdd/vmanuel/entity_typing_all_datasets/data/FIGER/test_lines.json
 DatasetName = FIGER
 ReductionFactor = 1
 
@@ -157,6 +161,7 @@ ReductionFactor = 1
 ExperimentName = adapters2_FIGER
 PathInputTrain = /datahdd/vmanuel/entity_typing_all_datasets/data/FIGER/train_partitioned.json
 PathInputDev = /datahdd/vmanuel/entity_typing_all_datasets/data/FIGER/dev_partitioned.json
+PathInputTest = /datahdd/vmanuel/entity_typing_all_datasets/data/FIGER/test_lines.json
 DatasetName = FIGER
 ReductionFactor = 2
 
@@ -164,6 +169,7 @@ ReductionFactor = 2
 ExperimentName = adapters4_FIGER
 PathInputTrain = /datahdd/vmanuel/entity_typing_all_datasets/data/FIGER/train_partitioned.json
 PathInputDev = /datahdd/vmanuel/entity_typing_all_datasets/data/FIGER/dev_partitioned.json
+PathInputTest = /datahdd/vmanuel/entity_typing_all_datasets/data/FIGER/test_lines.json
 DatasetName = FIGER
 ReductionFactor = 4
 
@@ -171,6 +177,7 @@ ReductionFactor = 4
 ExperimentName = adapters8_FIGER
 PathInputTrain = /datahdd/vmanuel/entity_typing_all_datasets/data/FIGER/train_partitioned.json
 PathInputDev = /datahdd/vmanuel/entity_typing_all_datasets/data/FIGER/dev_partitioned.json
+PathInputTest = /datahdd/vmanuel/entity_typing_all_datasets/data/FIGER/test_lines.json
 DatasetName = FIGER
 ReductionFactor = 8
 
@@ -178,6 +185,7 @@ ReductionFactor = 8
 ExperimentName = adapters16_FIGER
 PathInputTrain = /datahdd/vmanuel/entity_typing_all_datasets/data/FIGER/train_partitioned.json
 PathInputDev = /datahdd/vmanuel/entity_typing_all_datasets/data/FIGER/dev_partitioned.json
+PathInputTest = /datahdd/vmanuel/entity_typing_all_datasets/data/FIGER/test_lines.json
 DatasetName = FIGER
 ReductionFactor = 16
 
