added the result generation for different models and the computation of mean and std

--- a/result_scripts/generate_predictions_parameters.ini
+++ b/result_scripts/generate_predictions_parameters.ini
@@ -1,20 +1,21 @@
 [DEFAULT]
 
 DatasetName = DataSet ; the root of the dataset, the script will add .train, .dev and .test
-PathInputTrain = path_to_train_dataset
-PathInputDev   = path_to_dev_dataset
-PathInputTest  = path_to_test_dataset
+; PathInputTrain = path_to_train_dataset
+; PathInputDev   = path_to_dev_dataset
+; PathInputTest  = path_to_test_dataset
 experiment_name = experiment_name ; the name of the experiment, used to save the trained model in pl_main.py
 ModelRootPath = trained_models/ ; the folder in which trained models are saved
 performanceFile = results/performances/ ; the folder in which save the performances
 predictionFile = results/predictions/ ; the folder in which save the predictions
+AvgStdFile = results/avgs_stds/
 dev_or_test = both ; this value drive the dataset on which predictions are generated, if the value is "both", both dev and test will be generated 
 
 [adapters2_FIGER]
 DatasetName = FIGER
-PathInputTrain = /datahdd/vmanuel/entity_typing_all_datasets/data/FIGER/train_partitioned.json
-PathInputDev = /datahdd/vmanuel/entity_typing_all_datasets/data/FIGER/dev_partitioned.json
-PathInputTest = /datahdd/vmanuel/entity_typing_all_datasets/data/FIGER/test_lines.json
+; PathInputTrain = /datahdd/vmanuel/entity_typing_all_datasets/data/FIGER/train_partitioned.json
+; PathInputDev = /datahdd/vmanuel/entity_typing_all_datasets/data/FIGER/dev_partitioned.json
+; PathInputTest = /datahdd/vmanuel/entity_typing_all_datasets/data/FIGER/test_lines.json
 experiment_name = adapters2_FIGER
 dev_or_test = both
 
