--- a/parameters.ini
+++ b/parameters.ini
@@ -2,9 +2,9 @@
 ; PathInputTrain = /datahdd/vmanuel/entity_typing_all_datasets/data/FIGER/train_partitioned.json
 ; PathInputDev = /datahdd/vmanuel/entity_typing_all_datasets/data/FIGER/dev_partitioned.json
 
-PathInputTrain = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/choi/train.json
-PathInputDev   = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/choi/dev.json
-PathInputTest  = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/choi/test_tree.json
+PathInputTrain = None
+PathInputDev   = None
+PathInputTest  = None
 
 PathOutput = output/
 PathModel = trained_models
