--- a/result_scripts/generate_predictions_parameters.ini
+++ b/result_scripts/generate_predictions_parameters.ini
@@ -11,6 +11,18 @@ predictionFile = results/predictions/ ; the folder in which save the predictions
 AvgStdFile = results/avgs_stds/
 dev_or_test = both ; this value drive the dataset on which predictions are generated, if the value is "both", both dev and test will be generated 
 
+
+[adapters2_bbn]
+experiment_name = adapters2_BBN
+training_name = adapter_2_bbn
+PathInputTrain = /datahdd/vmanuel/entity_typing_all_datasets/data/BBN/BBN/train_partitioned.json
+PathInputDev =   /datahdd/vmanuel/entity_typing_all_datasets/data/BBN/BBN/dev_partitioned.json
+PathInputTest =  /datahdd/vmanuel/entity_typing_all_datasets/data/BBN/BBN/test_lines.json
+DatasetName = BBN
+ReductionFactor = 2
+dev_or_test = both
+
+
 [adapters2_FIGER]
 DatasetName = FIGER
 ; PathInputTrain = /datahdd/vmanuel/entity_typing_all_datasets/data/FIGER/train_partitioned.json
@@ -20,4 +32,3 @@ experiment_name = adapters2_FIGER
 dev_or_test = both
 
 [BBN]
-PathInputTest =   /datahdd/vmanuel/entity_typing_all_datasets/data/BBN/BBN/test_lines.json
