--- a/result_scripts/generate_predictions_parameters.ini
+++ b/result_scripts/generate_predictions_parameters.ini
@@ -6,6 +6,7 @@ DatasetName = DataSet ; the root of the dataset, the script will add .train, .de
 ; PathInputTest  = path_to_test_dataset
 experiment_name = experiment_name ; the name of the experiment, used to save the trained model in pl_main.py
 ModelRootPath = trained_models/ ; the folder in which trained models are saved
+PathModel = trained_models
 performanceFile = results/performances/ ; the folder in which save the performances
 predictionFile = results/predictions/ ; the folder in which save the predictions
 AvgStdFile = results/avgs_stds/
@@ -29,6 +30,6 @@ DatasetName = FIGER
 ; PathInputDev = /datahdd/vmanuel/entity_typing_all_datasets/data/FIGER/dev_partitioned.json
 ; PathInputTest = /datahdd/vmanuel/entity_typing_all_datasets/data/FIGER/test_lines.json
 experiment_name = adapters2_FIGER
-dev_or_test = both
+dev_or_test = dev
 
 [BBN]
