code to produce results fixed

--- a/parameters.ini
+++ b/parameters.ini
@@ -318,6 +318,7 @@ BertFineTuning = 0
 ExperimentName = bertFeatureExtraction_choi
 PathInputTrain = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/choi/train.json
 PathInputDev = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/choi/dev.json
+PathInputTest = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/choi/test_tree.json
 DatasetName = ChoiNew
 BertFineTuning = 0
 
@@ -325,6 +326,7 @@ BertFineTuning = 0
 ExperimentName = bertFT1_choi
 PathInputTrain = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/choi/train.json
 PathInputDev = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/choi/dev.json
+PathInputTest = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/choi/test_tree.json
 DatasetName = ChoiNew
 BertFineTuning = 1
 
@@ -332,6 +334,7 @@ BertFineTuning = 1
 ExperimentName = bertFT2_choi
 PathInputTrain = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/choi/train.json
 PathInputDev = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/choi/dev.json
+PathInputTest = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/choi/test_tree.json
 DatasetName = ChoiNew
 BertFineTuning = 2
 
@@ -339,6 +342,7 @@ BertFineTuning = 2
 ExperimentName = adapters1_choi
 PathInputTrain = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/choi/train.json
 PathInputDev = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/choi/dev.json
+PathInputTest = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/choi/test_tree.json
 DatasetName = ChoiNew
 ReductionFactor = 1
 
@@ -346,6 +350,7 @@ ReductionFactor = 1
 ExperimentName = adapters2_choi
 PathInputTrain = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/choi/train.json
 PathInputDev = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/choi/dev.json
+PathInputTest = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/choi/test_tree.json
 DatasetName = ChoiNew
 ReductionFactor = 2
 
@@ -353,6 +358,7 @@ ReductionFactor = 2
 ExperimentName = adapters4_choi
 PathInputTrain = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/choi/train.json
 PathInputDev = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/choi/dev.json
+PathInputTest = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/choi/test_tree.json
 DatasetName = ChoiNew
 ReductionFactor = 4
 
@@ -360,6 +366,7 @@ ReductionFactor = 4
 ExperimentName = adapters8_choi
 PathInputTrain = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/choi/train.json
 PathInputDev = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/choi/dev.json
+PathInputTest = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/choi/test_tree.json
 DatasetName = ChoiNew
 ReductionFactor = 8
 
@@ -367,5 +374,6 @@ ReductionFactor = 8
 ExperimentName = adapters16_choi
 PathInputTrain = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/choi/train.json
 PathInputDev = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/choi/dev.json
+PathInputTest = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/choi/test_tree.json
 DatasetName = ChoiNew
 ReductionFactor = 16
