--- a/result_scripts/generate_predictions_parameters.ini
+++ b/result_scripts/generate_predictions_parameters.ini
@@ -1,19 +1,25 @@
 [DEFAULT]
 
-DatasetName = DataSet ; the root of the dataset, the script will add .train, .dev and .test
+; the root of the dataset, the script will add .train, .dev and .test
+DatasetName = DataSet 
 ; PathInputTrain = path_to_train_dataset
 ; PathInputDev   = path_to_dev_dataset
 ; PathInputTest  = path_to_test_dataset
-experiment_name = experiment_name ; the name of the experiment, used to save the trained model in pl_main.py
-ModelRootPath = trained_models/ ; the folder in which trained models are saved
+; the name of the experiment, used to save the trained model in pl_main.py
+experiment_name = experiment_name 
+; the folder in which trained models are saved
+ModelRootPath = trained_models/ 
 PathModel = trained_models
-performanceFile = results/performances/ ; the folder in which save the performances
-predictionFile = results/predictions/ ; the folder in which save the predictions
+; the folder in which save the performances
+performanceFile = results/performances/ 
+; the folder in which save the predictions
+predictionFile = results/predictions/ 
 AvgStdFile = results/avgs_stds/
-dev_or_test = both ; this value drive the dataset on which predictions are generated, if the value is "both", both dev and test will be generated 
+; this value drive the dataset on which predictions are generated, if the value is "both", both dev and test will be generated 
+dev_or_test = both 
 
 
-[adapters2_bbn]
+[adapters_2_bbn]
 experiment_name = adapters2_BBN
 training_name = adapter_2_bbn
 PathInputTrain = /datahdd/vmanuel/entity_typing_all_datasets/data/BBN/BBN/train_partitioned.json
@@ -24,12 +30,18 @@ ReductionFactor = 2
 dev_or_test = both
 
 
-[adapters2_FIGER]
+[adapter_16_figer]
 DatasetName = FIGER
 ; PathInputTrain = /datahdd/vmanuel/entity_typing_all_datasets/data/FIGER/train_partitioned.json
 ; PathInputDev = /datahdd/vmanuel/entity_typing_all_datasets/data/FIGER/dev_partitioned.json
 ; PathInputTest = /datahdd/vmanuel/entity_typing_all_datasets/data/FIGER/test_lines.json
-experiment_name = adapters2_FIGER
-dev_or_test = dev
+experiment_name = adapter_16_figer
+dev_or_test = both
 
-[BBN]
+[adapter_2_choi]
+DatasetName = choiNew
+; PathInputTrain = /datahdd/vmanuel/entity_typing_all_datasets/data/FIGER/train_partitioned.json
+; PathInputDev = /datahdd/vmanuel/entity_typing_all_datasets/data/FIGER/dev_partitioned.json
+; PathInputTest = /datahdd/vmanuel/entity_typing_all_datasets/data/FIGER/test_lines.json
+experiment_name = adapter_2_choi
+dev_or_test = both
