--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,6 @@ lightning_logs/
 trained_models/
 entity_context_optimizations_lightning_logs/
 datasets_tokenized/
+results/avgs_stds/
+results/performances/
+results/predictions/
