added the predictions on nonnative datasets

--- a/result_scripts/generate_predictions_parameters.ini
+++ b/result_scripts/generate_predictions_parameters.ini
@@ -45,3 +45,12 @@ dev_or_test = both
 ; PathInputTrain = /datahdd/vmanuel/entity_typing_all_datasets/data/FIGER/train_partitioned.json
 ; PathInputDev = /datahdd/vmanuel/entity_typing_all_datasets/data/FIGER/dev_partitioned.json
 ; PathInputTest = /datahdd/vmanuel/entity_typing_all_datasets/data/FIGER/test_lines.json
+
+[adapter_2_choi_into_bbn]
+DatasetName = BBN
+experiment_name = adapter_2_bbn
+dev_or_test = both
+NativeDatasetName = BBN
+NonNativeDatasetName= choi
+NonNativeDev = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/mapped_datasets/dev_choi_into_BBN.json
+NonNativeTest = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/mapped_datasets/test_choi_into_BBN.json
