bug fix on prediction generation

--- a/result_scripts/generate_predictions_parameters.ini
+++ b/result_scripts/generate_predictions_parameters.ini
@@ -46,11 +46,11 @@ dev_or_test = both
 ; PathInputDev = /datahdd/vmanuel/entity_typing_all_datasets/data/FIGER/dev_partitioned.json
 ; PathInputTest = /datahdd/vmanuel/entity_typing_all_datasets/data/FIGER/test_lines.json
 
-[adapter_2_choi_into_bbn]
-DatasetName = BBN
-experiment_name = adapter_2_bbn
+[adapter_2_choi_to_figer]
+DatasetName = FIGER
+experiment_name = adapter_2_figer
 dev_or_test = both
-NativeDatasetName = BBN
+NativeDatasetName = figer
 NonNativeDatasetName= choi
-NonNativeDev = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/mapped_datasets/dev_choi_into_BBN.json
-NonNativeTest = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/mapped_datasets/test_choi_into_BBN.json
+NonNativeDev = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/mapped_datasets/dev_choi_into_figer.json
+NonNativeTest = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/mapped_datasets/test_choi_into_figer.json
