bug fix and support for predictions on native_filtered_datasets

--- a/parameters.ini
+++ b/parameters.ini
@@ -141,13 +141,13 @@ PathInputTest = /datahdd/vmanuel/entity_typing_all_datasets/data/FIGER/test_line
 DatasetName = FIGER
 BertFineTuning = 1
 
-[bert_ft_2_figer]
-ExperimentName = bertFT2_FIGER
-PathInputTrain = /datahdd/vmanuel/entity_typing_all_datasets/data/FIGER/train_partitioned.json
-PathInputDev = /datahdd/vmanuel/entity_typing_all_datasets/data/FIGER/dev_partitioned.json
-PathInputTest = /datahdd/vmanuel/entity_typing_all_datasets/data/FIGER/test_lines.json
-DatasetName = FIGER
-BertFineTuning = 2
+; [bert_ft_2_figer]
+; ExperimentName = bertFT2_FIGER
+; PathInputTrain = /datahdd/vmanuel/entity_typing_all_datasets/data/FIGER/train_partitioned.json
+; PathInputDev = /datahdd/vmanuel/entity_typing_all_datasets/data/FIGER/dev_partitioned.json
+; PathInputTest = /datahdd/vmanuel/entity_typing_all_datasets/data/FIGER/test_lines.json
+; DatasetName = FIGER
+; BertFineTuning = 2
 
 [adapter_1_figer]
 ExperimentName = adapters1_FIGER
@@ -377,3 +377,11 @@ PathInputDev = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_or
 PathInputTest = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/choi/test_tree.json
 DatasetName = ChoiNew
 ReductionFactor = 16
+
+[bert_ft_2_figer]
+ExperimentName = bertFT2_FIGER
+PathInputTrain = /datahdd/vmanuel/entity_typing_all_datasets/data/FIGER/train_partitioned.json
+PathInputDev = /datahdd/vmanuel/entity_typing_all_datasets/data/FIGER/dev_partitioned.json
+PathInputTest = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/mapped_datasets/test_figer_into_BBN.json
+DatasetName = nope
+BertFineTuning = 2
