--- a/result_scripts/generate_predictions_parameters.ini
+++ b/result_scripts/generate_predictions_parameters.ini
@@ -34,19 +34,52 @@ dev_or_test = both
 DatasetName = FIGER
 experiment_name = adapter_16_figer
 dev_or_test = both
-; PathInputTrain = /datahdd/vmanuel/entity_typing_all_datasets/data/FIGER/train_partitioned.json
-; PathInputDev = /datahdd/vmanuel/entity_typing_all_datasets/data/FIGER/dev_partitioned.json
-; PathInputTest = /datahdd/vmanuel/entity_typing_all_datasets/data/FIGER/test_lines.json
+
+; [bert_ft_2_figer]
+; DatasetName = FIGER
+; experiment_name = bert_ft_2_figer
+; dev_or_test = both
+
+[bert_ft_2_choi]
+DatasetName = choi
+experiment_name = bert_ft_2_choi
+dev_or_test = both
 
 [adapter_2_choi]
 DatasetName = choiNew
 experiment_name = adapter_2_choi
 dev_or_test = both
-; PathInputTrain = /datahdd/vmanuel/entity_typing_all_datasets/data/FIGER/train_partitioned.json
-; PathInputDev = /datahdd/vmanuel/entity_typing_all_datasets/data/FIGER/dev_partitioned.json
-; PathInputTest = /datahdd/vmanuel/entity_typing_all_datasets/data/FIGER/test_lines.json
 
-[adapter_2_choi_to_figer]
+[adapter_2_BBN_by_choi]
+DatasetName = choi
+experiment_name = adapter_2_choi
+dev_or_test = both
+NativeDatasetName = choi
+NonNativeDatasetName= bbn
+NonNativeDev = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/mapped_datasets/dev_BBN_into_choi.json
+NonNativeTest = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/mapped_datasets/test_BBN_into_choi.json
+
+[adapter_2_onto_by_choi]
+DatasetName = choi
+experiment_name = adapter_2_choi
+dev_or_test = both
+NativeDatasetName = choi
+NonNativeDatasetName= onto
+NonNativeDev = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/mapped_datasets/dev_Onto_into_choi.json
+NonNativeTest = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/mapped_datasets/test_Onto_into_choi.json
+
+
+[adapter_16_figer_by_choi]
+DatasetName = choi
+experiment_name = adapter_16_choi
+dev_or_test = both
+NativeDatasetName = choi
+NonNativeDatasetName= figer
+NonNativeDev = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/mapped_datasets/dev_figer_into_choi.json
+NonNativeTest = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/mapped_datasets/test_figer_into_choi.json
+
+
+[adapter_2_choi_by_figer]
 DatasetName = FIGER
 experiment_name = adapter_2_figer
 dev_or_test = both
@@ -54,3 +87,27 @@ NativeDatasetName = figer
 NonNativeDatasetName= choi
 NonNativeDev = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/mapped_datasets/dev_choi_into_figer.json
 NonNativeTest = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/mapped_datasets/test_choi_into_figer.json
+
+[adapter_16_BBN_by_figer]
+DatasetName = FIGER
+experiment_name = adapter_16_figer
+dev_or_test = both
+NativeDatasetName = figer
+NonNativeDatasetName= bbn
+NonNativeDev = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/mapped_datasets/dev_BBN_into_FIGER.json
+NonNativeTest = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/mapped_datasets/test_BBN_into_FIGER.json
+
+[adapter_16_onto_by_figer]
+DatasetName = FIGER
+experiment_name = adapter_16_figer
+dev_or_test = both
+NativeDatasetName = figer
+NonNativeDatasetName= onto
+NonNativeDev = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/mapped_datasets/dev_Onto_into_FIGER.json
+NonNativeTest = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/mapped_datasets/test_Ontonotes_into_FIGER.json
+
+[bert_ft_2_figer]
+DatasetName = figer
+experiment_name = bert_ft_2_figer
+dev_or_test = test
+fileName = bert_ft_2_figer_on_figer_filtered_w_BBN
